extract build plugins and avoid bug updating intellij-gradle-plugin (0.11.0 need kotlin 1.7.22)