@@ -11,12 +11,8 @@ import org.gradle.kotlin.dsl.withType
 import org.jetbrains.changelog.ChangelogPlugin
 import org.jetbrains.changelog.ChangelogPluginExtension
 import org.jetbrains.intellij.IntelliJPlugin
-import org.jetbrains.intellij.IntelliJPluginConstants
 import org.jetbrains.intellij.IntelliJPluginExtension
 import org.jetbrains.intellij.tasks.PatchPluginXmlTask
-import org.jetbrains.intellij.tasks.PrepareSandboxTask
-import org.jetbrains.intellij.tasks.RunIdeBase
-import org.jetbrains.intellij.tasks.SetupDependenciesTask
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 class IntellijGradlePlugin: Plugin<Project> {
@@ -49,41 +45,9 @@ class IntellijGradlePlugin: Plugin<Project> {
             sameSinceUntilBuild.set(true)
         }
 
-        val intellij = extensions.getByType<IntelliJPluginExtension>()
-
-        afterEvaluate {
-            // instead of IntellijPluginExtension.configurationDefaultDependencies
-            intellij.pluginDependencies.get().forEach { plugin ->
-                plugin.jarFiles.forEach {
-                    dependencies.add("compileOnly", files(it.toPath()))
-                }
-            }
-        }
-
         val changelog: ChangelogPluginExtension = extensions.getByType()
         tasks.named<PatchPluginXmlTask>("patchPluginXml") {
             changeNotes.set(provider { changelog.getLatest().toHTML() })
-        }
-
-        // avoid destination to be null
-        tasks.named<PrepareSandboxTask>("prepareSandbox") {
-            destinationDir = project.file("${intellij.sandboxDir.get()}/plugins")
-        }
-        tasks.named<PrepareSandboxTask>("prepareTestingSandbox") {
-            destinationDir = project.file("${intellij.sandboxDir.get()}/plugins-test")
-        }
-        tasks.named<PrepareSandboxTask>("prepareUiTestingSandbox") {
-            destinationDir = project.file("${intellij.sandboxDir.get()}/plugins-uiTest")
-        }
-        tasks.named<SetupDependenciesTask>(IntelliJPluginConstants.SETUP_DEPENDENCIES_TASK_NAME) {
-            idea.get().jarFiles.forEach {
-                dependencies.add("compileOnly", files(it.toPath()))
-            }
-        }
-
-        tasks.withType<RunIdeBase>().configureEach {
-            // avoid warning log
-            jvmArgs("--add-exports", "java.base/jdk.internal.vm=ALL-UNNAMED")
         }
     }
 }
